<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="bill">Bill</string>
    <string name="tip_percent">Tip %</string>
    <string name="person">Person</string>
    <string name="people">People</string>
    <string name="calculate">Calculate</string>
    <string name="tip_amount">Tip: </string>
    <string name="total">Total: </string>
    <string name="total_per_person">Total Per Person: </string>
    <string name="bill_format_error">Please enter a number</string>

</resources>
